# JadrChessWeb

./: .classpath  .project  pom.xml
HTTP/: BoardColor.js  BoardColor.ts  ChessBoard.js  ChessBoard.ts  ChessField.js  ChessField.ts  ChessKI.js  ChessKI.ts  ChessRow.js  ChessRow.ts  ChessWebSocket.js  ChessWebSocket.ts  cossintest.html  index.html  main.js  main.ts  pagegenerator.js  pagegenerator.ts  stylesheet.css  tsconfig.json  utils.js
HTTP/data/: BoardColors.json
HTTP/defaultFiles/: FILE_404.html  __foldermeta.json
rust/chess_rs/: Cargo.toml  bin.rs  chess_board.rs  color.rs  index.html  index.js  lib.rs  main.js
rust/chess_rs/chess_figure/: aware_array.rs  figure_move.rs  figure_type.rs  metadata.rs  mod.rs
rust/chess_rs/jdrcanvas/: mod.rs
rust/chess_rs/utils/: mod.rs
rust/chessweb/: Cargo.toml
rust/chessweb/src/: lobby.rs  main.rs
src/: lobby.rs  main.rs
src/chess/: chess_figure.rs  mod.rs
src_java/main/java/de/jadr/: ChessLobby.java  ChessWeb.java  ChessWebSocketServer.java  CustomWebSocketClient.java
src_java/main/java/de/jadr/chess/: ChessBoard.java  ChessField.java  ChessFigure.java  ChessFigureImage.java  Move.java  PseudoArrayList.java  VisualChessBoard.java
src_java/main/java/de/jadr/chess/KI/: AsyncChessBruteForcer.java  ChessBruteForcer.java
