[package]
name = "chess_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
name = "chess_rs"
path = "lib.rs"
crate-type = ["cdylib"]

[[bin]]
name = "chessbin_rs"
path = "bin.rs"



[dependencies]
wasm-bindgen = "0.2.80"