[package]
name = "chess_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
name = "chess_rs"
path = "lib.rs"
crate-type = ["cdylib"]

[[bin]]
name = "chess_rs_bin"
path = "bin.rs"


[dependencies]
js-sys = "0.3.56"
image = "0.23.14"
wasm-bindgen = "0.2.79"
once_cell = "1.10.0"
arrayvec = "0.7.2"
wasm-bindgen-futures = "0.4.30"
async-recursion = "1.0.0"


[dependencies.web-sys]
version = "0.3.4"
features = [
    "CanvasRenderingContext2d",
    "Document",
    "HtmlCanvasElement",
    "ImageData",
    "Response",
    "Window",
    'Element',
]